# fluxora

./: ,.nu  Cargo.toml  README.md  TODO.md  gateway.toml  x.nu  x.toml
.github/workflows/: chat.yaml  chef.yaml  gateway.yaml
crates/brick/: Cargo.toml
crates/brick/examples/: layout.json  scratch.rs
crates/brick/src/: lib.rs  merge.rs  render.rs
crates/brick_macro/: Cargo.toml
crates/brick_macro/src/: lib.rs  ops.rs  test.rs
crates/chat/: Cargo.toml
crates/chat/src/: main.rs
crates/chat/src/libs/: config.rs  shared.rs
crates/chat/src/libs/logic/: crm.rs
crates/content/: Cargo.toml
crates/gateway/: Cargo.toml
crates/gateway/src/: main.rs
crates/gateway/src/libs/: admin.rs  config.rs  shared.rs  webhooks.rs  websocket.rs
crates/iggy/: Cargo.toml
crates/kafka/: Cargo.toml
crates/message/: Cargo.toml
crates/message/src/: codec.rs  config.rs  instance.rs  lib.rs  queue.rs  time.rs
crates/message/src/iggy/: mod.rs
crates/message/src/kafka/: config.rs  mod.rs
crates/ui/: Cargo.toml
crates/ui/assets/: custom.css  main.css
crates/ui/src/: main.rs
crates/ui/src/libs/: hooks.rs  store.rs  ws.rs
crates/ui/src/libs/components/: container.rs  dynamic.rs  form.rs  frame.rs  popup.rs  rack.rs
crates/ui/src/libs/components/widgets/: button.rs  input.rs  select.rs  x.rs
crates/ui_macro/: Cargo.toml
crates/ui_macro/src/: lib.rs  test.rs  walk.rs
data/message/: 00.chat_layout.yaml  00.default_layout.yaml  00.no_layout.yaml  00.text.layout.yaml  01.segment.tmpl.yaml  02.concat.yaml  02.replace.yaml  03.list.yaml  05.form.yaml  05.from_in_case.yaml  06.table.yaml  07.svg.yaml  08.diagram.yaml  09.fold.yaml  12.placeholder.yaml
data/sandbox/: cbor.rs  serde.rs
docker/: Dockerfile  chat.Dockerfile  chef.Dockerfile
docs/decisions/: 001-reject-bincode-for-cbor.md  001-reject-bincode-for-cbor.zh.md  002-streaming-text-merge.md  002-streaming-text-merge.zh.md
manifest/: chat_layout.yaml  layout.json  segment.tmpl.json
