[workspace]
resolver = "3"
members = [
  "crates/agent",
  "crates/chat",
  "crates/brick",
  "crates/brick_macro",
  "crates/content",
  "crates/gateway",
  "crates/message",
  "crates/ui",
  "crates/ui_macro",
]

[workspace.dependencies]
anyhow = "1.0.100"
async-fs = "2.2.0"
axum = "0.8.8"
axum-extra = { version = "0.12" }
bon = "3.8.1"
brick = { path = "crates/brick", version = "^0.1.0", features = ["classify", "dioxus", "merge", "render"] } #unified
chrono = { version = "0.4.42", features = ["serde"] }
content = { path = "crates/content", version = "^0.1.0" } #unified
dioxus = { version = "0.7.2" }
figment = { version = "0.10.19", features = ["toml", "env"] }
futures = "0.3.31"
futures-util = "0.3.31"
gloo-net = "0.6.0"
iggy = "0.8.0"
indexmap = { version = "2.12.1", features = ["serde"] }
indoc = "2.0.7"
itertools = "0.14.0"
js-sys = "0.3.83"
libc = "0.2.178"
listenfd = "1.0.2"
maplit = "1.0.2"
markdown = "1.0.0"
message = { path = "crates/message", version = "^0.1.0" } #unified
minijinja = { version = "2.14.0", features = ["loader"] }
notify = "8.2.0"
postcard = { version = "1.1.3", features = ["use-std"] }
proc-macro2 = { version = "1.0.104", features = ["span-locations"] }
quote = "1.0.42"
rand = "0.9.2"
rdkafka = { version = "0.38", features = ["cmake-build"] }
refinery = { version = "0.9.0" }
regex = { version = "1" }
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_derive = "1.0.228"
serde_json = "1.0.148"
serde_with = "3.16.1"
serde_yaml = "0.9.34"
short-uuid = "0.2.1"
sqlx = { version = "0.8.6" }
syn = { version = "2.0.112", features = ["extra-traits", "full"] }
thiserror = "2.0.17"
time = "0.3.44"
tokio = { version = "1.48.0", features = ["full"] }
tokio-postgres = { version = "0.7.15" }
tower-http = { version = "0.6.8", features = ["fs"] }
tracing = "0.1.44"
tracing-serde = "0.2.0"
tracing-subscriber = { version = "0.3.22", features = ["json", "env-filter"] }

tracing-wasm = "0.2.1"
url = "2.5.7"
urlencoding = "2.1.3"
web-sys = "0.3.83"

[workspace.package]
rust-version = "1.88.0"

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

