[workspace]
resolver = "3"
members = [
  "crates/agent",
  "crates/chat",
  "crates/brick",
  "crates/brick_macro",
  "crates/content",
  "crates/gateway",
  "crates/message",
  "crates/ui",
  "crates/ui_macro",
]

[workspace.dependencies]
anyhow = "1.0.102"
async-fs = "2.2.0"
axum = "0.8.9"
axum-extra = { version = "0.12" }
bon = "3.9.1"
brick = { path = "crates/brick", version = "^0.1.0", features = ["classify", "dioxus", "merge", "render"] } #unified
chrono = { version = "0.4.44", features = ["serde"] }
content = { path = "crates/content", version = "^0.1.0" } #unified
dioxus = { version = "0.7.5" }
figment = { version = "0.10.19", features = ["toml", "env"] }
futures = "0.3.32"
futures-util = "0.3.32"
gloo-net = "0.7.0"
iggy = "0.9.0"
indexmap = { version = "2.14.0", features = ["serde"] }
indoc = "2.0.7"
itertools = "0.14.0"
js-sys = "0.3.95"
libc = "0.2.185"
listenfd = "1.0.2"
maplit = "1.0.2"
dashmap = "6.1.0"
arc-swap = "1.9.1"
markdown = "1.0.0"
message = { path = "crates/message", version = "^0.1.0" } #unified
minijinja = { version = "2.19.0", features = ["loader"] }
notify = "8.2.0"
postcard = { version = "1.1.3", features = ["use-std"] }
proc-macro2 = { version = "1.0.106", features = ["span-locations"] }
quote = "1.0.45"
rand = "0.10.1"
rdkafka = { version = "0.39", features = ["cmake-build"] }
refinery = { version = "0.9.1" }
regex = { version = "1" }
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_derive = "1.0.228"
serde_json = "1.0.149"
serde_with = "3.18.0"
serde_yaml = "0.9.34"
short-uuid = "0.2.1"
sqlx = { version = "0.8.6" }
syn = { version = "2.0.117", features = ["extra-traits", "full"] }
thiserror = "2.0.18"
time = "0.3.47"
tokio = { version = "1.52.1", features = ["full"] }
tokio-postgres = { version = "0.7.17" }
tower-http = { version = "0.6.8", features = ["fs"] }
tracing = "0.1.44"
tracing-serde = "0.2.0"
tracing-subscriber = { version = "0.3.23", features = ["json", "env-filter"] }

tracing-wasm = "0.2.1"
url = "2.5.8"
urlencoding = "2.1.3"
web-sys = "0.3.95"

[workspace.package]
rust-version = "1.88.0"

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3
