[package]
name = "brick"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { workspace = true, optional = true }
itertools.workspace = true
minijinja = { workspace = true, features = ["loader"] }
serde.workspace = true
serde_json.workspace = true
schemars = { version = "1.2.0", optional = true, features = ["chrono04"] }
regex = { workspace = true, optional = true }
maplit = { workspace = true, optional = true }
brick_macro = { path = "../brick_macro", optional = true }

[features]
dioxus = ["dep:dioxus"]
schema = ["dep:schemars"]
classify = ["dep:regex", "dep:brick_macro"]
ops = ["dep:brick_macro"]
merge = ["ops"]
render = ["ops"]
scratch = ["dep:maplit"]

[[example]]
name = "brickschema"
required-features = ["schema", "props"]

[[example]]
name = "scratch"
required-features = ["scratch"]
