[package]
name = "chat"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
figment = { workspace = true }
futures = { workspace = true }
minijinja = { workspace = true, features = ["loader"] }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
short-uuid = { workspace = true }
sqlx = { version = "0.8.6", features = ["chrono", "postgres", "runtime-tokio"] }
chrono = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-serde = { workspace = true }
tracing-subscriber = { workspace = true }
kafka = { path = "../kafka" }
refinery = { version = "0.9.0", features = ["tokio-postgres"] }
tokio-postgres = { version = "0.7.15", features = ["with-serde_json-1", "with-chrono-0_4"] }
message = { path = "../message" }
content = { path = "../content" }
brick = { path = "../brick" }
url = { workspace = true }
indoc = { workspace = true }
async-fs = { workspace = true }
serde_yaml = { workspace = true }
maplit = { workspace = true }
urlencoding = { workspace = true }
indexmap = { workspace = true }

[[bin]]
name = "chat"
path = "src/main.rs"

[[bin]]
name = "migrate"
path = "src/migrate.rs"
