[package]
name = "chat"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
async-fs.workspace = true
axum.workspace = true
brick = { workspace = true, features = ["classify", "dioxus", "merge", "render"] } #unified
chrono.workspace = true
content = { workspace = true } #unified
figment.workspace = true
futures.workspace = true
indexmap.workspace = true
indoc.workspace = true
maplit.workspace = true
message = { workspace = true } #unified
minijinja = { workspace = true, features = ["loader"] }
refinery = { workspace = true, features = ["tokio-postgres"] }
reqwest.workspace = true
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
serde_with.workspace = true
serde_yaml.workspace = true
short-uuid.workspace = true
sqlx = { workspace = true, features = ["chrono", "postgres", "runtime-tokio"] }
thiserror.workspace = true
tokio.workspace = true
tokio-postgres = { workspace = true, features = ["with-serde_json-1", "with-chrono-0_4"] }
tracing.workspace = true
tracing-serde.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
urlencoding.workspace = true

[[bin]]
name = "chat"
path = "src/main.rs"

[[bin]]
name = "migrate"
path = "src/migrate.rs"
