[package]
name = "gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
axum.workspace = true
axum.features = ["ws", "macros"]
axum-extra.workspace = true
axum-extra.features = ["cookie"]
futures.workspace = true
tower-http.workspace = true
tower-http.worksapce = true
libc = "0.2.178"
rand = "0.9.2"
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
serde_with.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-serde.workspace = true
tracing-subscriber.workspace = true
figment.workspace = true
notify = "8.2.0"
reqwest.workspace = true
minijinja.workspace = true
time.workspace = true
time.features = ["formatting", "parsing", "serde"]
thiserror.workspace = true
short-uuid.workspace = true
async-fs.workspace = true
listenfd = "1.0.2"
message.path = "../message"
bon.workspace = true
indexmap.workspace = true
