[package]
name = "gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
async-fs.workspace = true
axum.features = ["ws", "macros"]
axum.workspace = true
axum-extra.features = ["cookie"]
axum-extra.workspace = true
bon.workspace = true
figment.workspace = true
futures.workspace = true
indexmap.workspace = true
message = { workspace = true } #unified
minijinja.workspace = true
libc.workspace = true
listenfd.workspace = true
notify.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
serde_with.workspace = true
short-uuid.workspace = true
thiserror.workspace = true
time.features = ["formatting", "parsing", "serde"]
time.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-serde.workspace = true
tracing-subscriber.workspace = true
postcard.workspace = true
dashmap.workspace = true
arc-swap.workspace = true
