[package]
name = "kafka"
version = "0.1.0"
edition = "2024"

[dependencies]
rdkafka = { version = "0.38", features = ["cmake-build"] }
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
message.path = "../message"
chrono.workspace = true
