[package]
name = "message"
version = "0.1.0"
edition = "2024"

[dependencies]
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
chrono.workspace = true
rdkafka = { workspace = true, optional = true }
iggy = { workspace = true, optional = true }
anyhow.workspace = true
futures-util.workspace = true

[features]
default = ["kafka", "iggy"]
kafka = ["dep:rdkafka"]
iggy = ["dep:iggy"]
