[package]
name = "message"
version = "0.1.0"
edition = "2024"

[dependencies]
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
serde_with.workspace = true
time.workspace = true
tracing.workspace = true
chrono.workspace = true
thiserror.workspace = true
ciborium.workspace = true
tokio = { workspace = true, optional = true }
rdkafka = { workspace = true, optional = true }
iggy = { workspace = true, optional = true }
anyhow.workspace = true
futures-util.workspace = true

[features]
default = ["kafka", "iggy"]
kafka = ["dep:rdkafka", "dep:tokio"]
iggy = ["dep:iggy", "dep:tokio"]
