[package]
name = "ui"
version = "0.1.0"
authors = ["nash <fj0rd@qq.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
brick = { workspace = true } #unified
chrono.workspace = true
content = { workspace = true } #unified
dioxus.features = ["macro", "web"]
dioxus.workspace = true
futures.workspace = true
gloo-net.workspace = true
indoc.workspace = true
itertools.workspace = true
js-sys.workspace = true
maplit.workspace = true
markdown.workspace = true
minijinja.workspace = true
serde.features = ["derive", "serde_derive"]
serde.workspace = true
serde_json.workspace = true
tracing-wasm.workspace = true
ui_macro.path = "../ui_macro"
web-sys.workspace = true

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

